--- a/python/Python-final.ipynb
+++ b/python/Python-final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "4       5.0   Matematics Advanced           2.0       13.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "3           4.0          Sport"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4       1.0      274.0  72.569900"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "4        5.0     Heather   Metcalf      F"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "4       31.0    Chanda   Fillmore      F"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "4           2.0       14.0        Science  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4645,7 +4645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4654,7 +4654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4663,28 +4663,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "df1.loc[(df1['DepartmentID']==1),'Engdegree']=df1['degree']\n",
     "df1.loc[(df1['DepartmentID']==2),'Scedegree']=df1['degree']\n",
-    "df1.loc[(df1['DepartmentID']==3),'Spodegree']=df1['degree']\n",
-    "df1.loc[(df1['DepartmentID']==4),'Artdegree']=df1['degree']"
+    "df1.loc[(df1['DepartmentID']==3),'Artdegree']=df1['degree']\n",
+    "df1.loc[(df1['DepartmentID']==4),'Spodegree']=df1['degree']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfstudentview1=df1.groupby(['StudentId','FirstName','LastName']).agg({'CourseName':'count','Engdegree':'mean','Scedegree':'mean','Spodegree':'mean','Artdegree':'mean','degree':'mean'})"
+    "dfstudentview1=df1.groupby(['StudentId','FirstName','LastName']).agg({'CourseName':'count','Engdegree':'mean','Scedegree':'mean','Artdegree':'mean','Spodegree':'mean','degree':'mean'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4713,8 +4713,8 @@
        "      <th>CourseName</th>\n",
        "      <th>Engdegree</th>\n",
        "      <th>Scedegree</th>\n",
-       "      <th>Spodegree</th>\n",
        "      <th>Artdegree</th>\n",
+       "      <th>Spodegree</th>\n",
        "      <th>degree</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -5471,7 +5471,7 @@
        "278.0      Sydney     Blas                    3        NaN   72.578017   \n",
        "280.0      Matthew    Mcgrath                 5        NaN   75.696576   \n",
        "\n",
-       "                                     Spodegree  Artdegree     degree  \n",
+       "                                     Artdegree  Spodegree     degree  \n",
        "StudentId FirstName   LastName                                        \n",
        "1.0        Alexandria Heller         86.677535        NaN  81.337515  \n",
        "2.0        Cassie     Liska          79.542738        NaN  79.137364  \n",
@@ -5538,7 +5538,7 @@
        "[256 rows x 6 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
