--- a/stats/Data Cleansing with R.ipynb
+++ b/stats/Data Cleansing with R.ipynb
@@ -2447,6 +2447,31 @@
     "animals.matched <- match.data(m.out) \n",
     "animals.matched %>% arrange(distance)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outlierremover <- function(x) {\n",
+    "    id <- c(1:length(x))\n",
+    "    outliers <- identify(id,x)\n",
+    "    x1<- x[-outliers]\n",
+    "    qqnorm(x1)\n",
+    "    qqline(x1)\n",
+    "    return(x1)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1 <- movie"
+   ]
   }
  ],
  "metadata": {
