--- a/stats/homeexcercise.ipynb
+++ b/stats/homeexcercise.ipynb
@@ -33628,10 +33628,512 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>revenue</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>12314651</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>95149435</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>13092000</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>16000000</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td> 3923970</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td> 3261638</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 1\n",
+       "\\begin{tabular}{r|l}\n",
+       "  & revenue\\\\\n",
+       "  & <int>\\\\\n",
+       "\\hline\n",
+       "\t1 & 12314651\\\\\n",
+       "\t2 & 95149435\\\\\n",
+       "\t3 & 13092000\\\\\n",
+       "\t4 & 16000000\\\\\n",
+       "\t5 &  3923970\\\\\n",
+       "\t6 &  3261638\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 1\n",
+       "\n",
+       "| <!--/--> | revenue &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| 1 | 12314651 |\n",
+       "| 2 | 95149435 |\n",
+       "| 3 | 13092000 |\n",
+       "| 4 | 16000000 |\n",
+       "| 5 |  3923970 |\n",
+       "| 6 |  3261638 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  revenue \n",
+       "1 12314651\n",
+       "2 95149435\n",
+       "3 13092000\n",
+       "4 16000000\n",
+       "5  3923970\n",
+       "6  3261638"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dt <- movies_ff_v['revenue']\n",
+    "head(dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "outlierremover <- function(x) {\n",
+    "    id <- c(1:length(x))\n",
+    "    outliers <- identify(id,x)\n",
+    "    x1<- x[-outliers]\n",
+    "    qqnorm(x1)\n",
+    "    qqline(x1)\n",
+    "    return(x1)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in identify.default(id, x): plot.new has not been called yet\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in identify.default(id, x): plot.new has not been called yet\nTraceback:\n",
+      "1. outlierremover(dt$revenue)",
+      "2. identify(id, x)   # at line 3 of file <text>",
+      "3. identify.default(id, x)"
+     ]
+    }
+   ],
+   "source": [
+    "outlierremover(dt$revenue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>412</li>\n",
+       "\t<li>413</li>\n",
+       "\t<li>415</li>\n",
+       "\t<li>416</li>\n",
+       "\t<li>417</li>\n",
+       "\t<li>1000</li>\n",
+       "\t<li>2</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 412\n",
+       "\\item 413\n",
+       "\\item 415\n",
+       "\\item 416\n",
+       "\\item 417\n",
+       "\\item 1000\n",
+       "\\item 2\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 412\n",
+       "2. 413\n",
+       "3. 415\n",
+       "4. 416\n",
+       "5. 417\n",
+       "6. 1000\n",
+       "7. 2\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  412  413  415  416  417 1000    2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in identify.default(id, x): plot.new has not been called yet\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in identify.default(id, x): plot.new has not been called yet\nTraceback:\n",
+      "1. outlierremover(rr)",
+      "2. identify(id, x)   # at line 3 of file <text>",
+      "3. identify.default(id, x)"
+     ]
+    }
+   ],
+   "source": [
+    "outlierremover(rr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'movie_id'</li>\n",
+       "\t<li>'budget'</li>\n",
+       "\t<li>'original_language'</li>\n",
+       "\t<li>'popularity'</li>\n",
+       "\t<li>'release_date'</li>\n",
+       "\t<li>'runtime'</li>\n",
+       "\t<li>'runtime_cat'</li>\n",
+       "\t<li>'revenue'</li>\n",
+       "\t<li>'sw_lang_en'</li>\n",
+       "\t<li>'sw_web_presence'</li>\n",
+       "\t<li>'sw_has_poster'</li>\n",
+       "\t<li>'sw_tagline'</li>\n",
+       "\t<li>'keyword_cnt'</li>\n",
+       "\t<li>'release_year'</li>\n",
+       "\t<li>'release_month'</li>\n",
+       "\t<li>'high_release_month'</li>\n",
+       "\t<li>'release_day'</li>\n",
+       "\t<li>'seasonality'</li>\n",
+       "\t<li>'sw_collection'</li>\n",
+       "\t<li>'producers_cnt'</li>\n",
+       "\t<li>'countries_cnt'</li>\n",
+       "\t<li>'lang_US'</li>\n",
+       "\t<li>'lang_FR'</li>\n",
+       "\t<li>'lang_RU'</li>\n",
+       "\t<li>'lang_ES'</li>\n",
+       "\t<li>'lang_JA'</li>\n",
+       "\t<li>'keywords_cnt'</li>\n",
+       "\t<li>'actor0_movies_cnt'</li>\n",
+       "\t<li>'actor0_movies_5y_cnt'</li>\n",
+       "\t<li>'actor1_movies_cnt'</li>\n",
+       "\t<li>'actor1_movies_5y_cnt'</li>\n",
+       "\t<li>'actor2_movies_cnt'</li>\n",
+       "\t<li>'actor2_movies_5y_cnt'</li>\n",
+       "\t<li>'sw_female_actor0'</li>\n",
+       "\t<li>'sw_female_actor1'</li>\n",
+       "\t<li>'sw_female_actor2'</li>\n",
+       "\t<li>'sw_male_actor0'</li>\n",
+       "\t<li>'sw_male_actor1'</li>\n",
+       "\t<li>'sw_male_actor2'</li>\n",
+       "\t<li>'actor0_prev_revenue'</li>\n",
+       "\t<li>'actor1_prev_revenue'</li>\n",
+       "\t<li>'actor2_prev_revenue'</li>\n",
+       "\t<li>'director_movies_cnt'</li>\n",
+       "\t<li>'director_movies_5y_cnt'</li>\n",
+       "\t<li>'genre_adventure'</li>\n",
+       "\t<li>'genre_fantasy'</li>\n",
+       "\t<li>'genre_animation'</li>\n",
+       "\t<li>'genre_drama'</li>\n",
+       "\t<li>'genre_horror'</li>\n",
+       "\t<li>'genre_action'</li>\n",
+       "\t<li>'genre_comedy'</li>\n",
+       "\t<li>'genre_history'</li>\n",
+       "\t<li>'genre_western'</li>\n",
+       "\t<li>'genre_thriller'</li>\n",
+       "\t<li>'genre_crime'</li>\n",
+       "\t<li>'genre_documentary'</li>\n",
+       "\t<li>'genre_science_fiction'</li>\n",
+       "\t<li>'genre_mystery'</li>\n",
+       "\t<li>'genre_music'</li>\n",
+       "\t<li>'genre_romance'</li>\n",
+       "\t<li>'genre_family'</li>\n",
+       "\t<li>'genre_war'</li>\n",
+       "\t<li>'genre_foreign'</li>\n",
+       "\t<li>'depart_Art'</li>\n",
+       "\t<li>'depart_Camera'</li>\n",
+       "\t<li>'depart_Crew'</li>\n",
+       "\t<li>'depart_Custom_Mkup'</li>\n",
+       "\t<li>'depart_Directing'</li>\n",
+       "\t<li>'depart_Editing'</li>\n",
+       "\t<li>'depart_Lighting'</li>\n",
+       "\t<li>'depart_Production'</li>\n",
+       "\t<li>'depart_Sound'</li>\n",
+       "\t<li>'depart_Visual_Effects'</li>\n",
+       "\t<li>'depart_Writing'</li>\n",
+       "\t<li>'depart_Art_female'</li>\n",
+       "\t<li>'depart_Camera_female'</li>\n",
+       "\t<li>'depart_Crew_female'</li>\n",
+       "\t<li>'depart_Custom_Mkup_female'</li>\n",
+       "\t<li>'depart_Directing_female'</li>\n",
+       "\t<li>'depart_Editing_female'</li>\n",
+       "\t<li>'depart_Lighting_female'</li>\n",
+       "\t<li>'depart_Production_female'</li>\n",
+       "\t<li>'depart_Sound_female'</li>\n",
+       "\t<li>'depart_Visual_Effects_female'</li>\n",
+       "\t<li>'depart_Writing_female'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'movie\\_id'\n",
+       "\\item 'budget'\n",
+       "\\item 'original\\_language'\n",
+       "\\item 'popularity'\n",
+       "\\item 'release\\_date'\n",
+       "\\item 'runtime'\n",
+       "\\item 'runtime\\_cat'\n",
+       "\\item 'revenue'\n",
+       "\\item 'sw\\_lang\\_en'\n",
+       "\\item 'sw\\_web\\_presence'\n",
+       "\\item 'sw\\_has\\_poster'\n",
+       "\\item 'sw\\_tagline'\n",
+       "\\item 'keyword\\_cnt'\n",
+       "\\item 'release\\_year'\n",
+       "\\item 'release\\_month'\n",
+       "\\item 'high\\_release\\_month'\n",
+       "\\item 'release\\_day'\n",
+       "\\item 'seasonality'\n",
+       "\\item 'sw\\_collection'\n",
+       "\\item 'producers\\_cnt'\n",
+       "\\item 'countries\\_cnt'\n",
+       "\\item 'lang\\_US'\n",
+       "\\item 'lang\\_FR'\n",
+       "\\item 'lang\\_RU'\n",
+       "\\item 'lang\\_ES'\n",
+       "\\item 'lang\\_JA'\n",
+       "\\item 'keywords\\_cnt'\n",
+       "\\item 'actor0\\_movies\\_cnt'\n",
+       "\\item 'actor0\\_movies\\_5y\\_cnt'\n",
+       "\\item 'actor1\\_movies\\_cnt'\n",
+       "\\item 'actor1\\_movies\\_5y\\_cnt'\n",
+       "\\item 'actor2\\_movies\\_cnt'\n",
+       "\\item 'actor2\\_movies\\_5y\\_cnt'\n",
+       "\\item 'sw\\_female\\_actor0'\n",
+       "\\item 'sw\\_female\\_actor1'\n",
+       "\\item 'sw\\_female\\_actor2'\n",
+       "\\item 'sw\\_male\\_actor0'\n",
+       "\\item 'sw\\_male\\_actor1'\n",
+       "\\item 'sw\\_male\\_actor2'\n",
+       "\\item 'actor0\\_prev\\_revenue'\n",
+       "\\item 'actor1\\_prev\\_revenue'\n",
+       "\\item 'actor2\\_prev\\_revenue'\n",
+       "\\item 'director\\_movies\\_cnt'\n",
+       "\\item 'director\\_movies\\_5y\\_cnt'\n",
+       "\\item 'genre\\_adventure'\n",
+       "\\item 'genre\\_fantasy'\n",
+       "\\item 'genre\\_animation'\n",
+       "\\item 'genre\\_drama'\n",
+       "\\item 'genre\\_horror'\n",
+       "\\item 'genre\\_action'\n",
+       "\\item 'genre\\_comedy'\n",
+       "\\item 'genre\\_history'\n",
+       "\\item 'genre\\_western'\n",
+       "\\item 'genre\\_thriller'\n",
+       "\\item 'genre\\_crime'\n",
+       "\\item 'genre\\_documentary'\n",
+       "\\item 'genre\\_science\\_fiction'\n",
+       "\\item 'genre\\_mystery'\n",
+       "\\item 'genre\\_music'\n",
+       "\\item 'genre\\_romance'\n",
+       "\\item 'genre\\_family'\n",
+       "\\item 'genre\\_war'\n",
+       "\\item 'genre\\_foreign'\n",
+       "\\item 'depart\\_Art'\n",
+       "\\item 'depart\\_Camera'\n",
+       "\\item 'depart\\_Crew'\n",
+       "\\item 'depart\\_Custom\\_Mkup'\n",
+       "\\item 'depart\\_Directing'\n",
+       "\\item 'depart\\_Editing'\n",
+       "\\item 'depart\\_Lighting'\n",
+       "\\item 'depart\\_Production'\n",
+       "\\item 'depart\\_Sound'\n",
+       "\\item 'depart\\_Visual\\_Effects'\n",
+       "\\item 'depart\\_Writing'\n",
+       "\\item 'depart\\_Art\\_female'\n",
+       "\\item 'depart\\_Camera\\_female'\n",
+       "\\item 'depart\\_Crew\\_female'\n",
+       "\\item 'depart\\_Custom\\_Mkup\\_female'\n",
+       "\\item 'depart\\_Directing\\_female'\n",
+       "\\item 'depart\\_Editing\\_female'\n",
+       "\\item 'depart\\_Lighting\\_female'\n",
+       "\\item 'depart\\_Production\\_female'\n",
+       "\\item 'depart\\_Sound\\_female'\n",
+       "\\item 'depart\\_Visual\\_Effects\\_female'\n",
+       "\\item 'depart\\_Writing\\_female'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'movie_id'\n",
+       "2. 'budget'\n",
+       "3. 'original_language'\n",
+       "4. 'popularity'\n",
+       "5. 'release_date'\n",
+       "6. 'runtime'\n",
+       "7. 'runtime_cat'\n",
+       "8. 'revenue'\n",
+       "9. 'sw_lang_en'\n",
+       "10. 'sw_web_presence'\n",
+       "11. 'sw_has_poster'\n",
+       "12. 'sw_tagline'\n",
+       "13. 'keyword_cnt'\n",
+       "14. 'release_year'\n",
+       "15. 'release_month'\n",
+       "16. 'high_release_month'\n",
+       "17. 'release_day'\n",
+       "18. 'seasonality'\n",
+       "19. 'sw_collection'\n",
+       "20. 'producers_cnt'\n",
+       "21. 'countries_cnt'\n",
+       "22. 'lang_US'\n",
+       "23. 'lang_FR'\n",
+       "24. 'lang_RU'\n",
+       "25. 'lang_ES'\n",
+       "26. 'lang_JA'\n",
+       "27. 'keywords_cnt'\n",
+       "28. 'actor0_movies_cnt'\n",
+       "29. 'actor0_movies_5y_cnt'\n",
+       "30. 'actor1_movies_cnt'\n",
+       "31. 'actor1_movies_5y_cnt'\n",
+       "32. 'actor2_movies_cnt'\n",
+       "33. 'actor2_movies_5y_cnt'\n",
+       "34. 'sw_female_actor0'\n",
+       "35. 'sw_female_actor1'\n",
+       "36. 'sw_female_actor2'\n",
+       "37. 'sw_male_actor0'\n",
+       "38. 'sw_male_actor1'\n",
+       "39. 'sw_male_actor2'\n",
+       "40. 'actor0_prev_revenue'\n",
+       "41. 'actor1_prev_revenue'\n",
+       "42. 'actor2_prev_revenue'\n",
+       "43. 'director_movies_cnt'\n",
+       "44. 'director_movies_5y_cnt'\n",
+       "45. 'genre_adventure'\n",
+       "46. 'genre_fantasy'\n",
+       "47. 'genre_animation'\n",
+       "48. 'genre_drama'\n",
+       "49. 'genre_horror'\n",
+       "50. 'genre_action'\n",
+       "51. 'genre_comedy'\n",
+       "52. 'genre_history'\n",
+       "53. 'genre_western'\n",
+       "54. 'genre_thriller'\n",
+       "55. 'genre_crime'\n",
+       "56. 'genre_documentary'\n",
+       "57. 'genre_science_fiction'\n",
+       "58. 'genre_mystery'\n",
+       "59. 'genre_music'\n",
+       "60. 'genre_romance'\n",
+       "61. 'genre_family'\n",
+       "62. 'genre_war'\n",
+       "63. 'genre_foreign'\n",
+       "64. 'depart_Art'\n",
+       "65. 'depart_Camera'\n",
+       "66. 'depart_Crew'\n",
+       "67. 'depart_Custom_Mkup'\n",
+       "68. 'depart_Directing'\n",
+       "69. 'depart_Editing'\n",
+       "70. 'depart_Lighting'\n",
+       "71. 'depart_Production'\n",
+       "72. 'depart_Sound'\n",
+       "73. 'depart_Visual_Effects'\n",
+       "74. 'depart_Writing'\n",
+       "75. 'depart_Art_female'\n",
+       "76. 'depart_Camera_female'\n",
+       "77. 'depart_Crew_female'\n",
+       "78. 'depart_Custom_Mkup_female'\n",
+       "79. 'depart_Directing_female'\n",
+       "80. 'depart_Editing_female'\n",
+       "81. 'depart_Lighting_female'\n",
+       "82. 'depart_Production_female'\n",
+       "83. 'depart_Sound_female'\n",
+       "84. 'depart_Visual_Effects_female'\n",
+       "85. 'depart_Writing_female'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] \"movie_id\"                     \"budget\"                      \n",
+       " [3] \"original_language\"            \"popularity\"                  \n",
+       " [5] \"release_date\"                 \"runtime\"                     \n",
+       " [7] \"runtime_cat\"                  \"revenue\"                     \n",
+       " [9] \"sw_lang_en\"                   \"sw_web_presence\"             \n",
+       "[11] \"sw_has_poster\"                \"sw_tagline\"                  \n",
+       "[13] \"keyword_cnt\"                  \"release_year\"                \n",
+       "[15] \"release_month\"                \"high_release_month\"          \n",
+       "[17] \"release_day\"                  \"seasonality\"                 \n",
+       "[19] \"sw_collection\"                \"producers_cnt\"               \n",
+       "[21] \"countries_cnt\"                \"lang_US\"                     \n",
+       "[23] \"lang_FR\"                      \"lang_RU\"                     \n",
+       "[25] \"lang_ES\"                      \"lang_JA\"                     \n",
+       "[27] \"keywords_cnt\"                 \"actor0_movies_cnt\"           \n",
+       "[29] \"actor0_movies_5y_cnt\"         \"actor1_movies_cnt\"           \n",
+       "[31] \"actor1_movies_5y_cnt\"         \"actor2_movies_cnt\"           \n",
+       "[33] \"actor2_movies_5y_cnt\"         \"sw_female_actor0\"            \n",
+       "[35] \"sw_female_actor1\"             \"sw_female_actor2\"            \n",
+       "[37] \"sw_male_actor0\"               \"sw_male_actor1\"              \n",
+       "[39] \"sw_male_actor2\"               \"actor0_prev_revenue\"         \n",
+       "[41] \"actor1_prev_revenue\"          \"actor2_prev_revenue\"         \n",
+       "[43] \"director_movies_cnt\"          \"director_movies_5y_cnt\"      \n",
+       "[45] \"genre_adventure\"              \"genre_fantasy\"               \n",
+       "[47] \"genre_animation\"              \"genre_drama\"                 \n",
+       "[49] \"genre_horror\"                 \"genre_action\"                \n",
+       "[51] \"genre_comedy\"                 \"genre_history\"               \n",
+       "[53] \"genre_western\"                \"genre_thriller\"              \n",
+       "[55] \"genre_crime\"                  \"genre_documentary\"           \n",
+       "[57] \"genre_science_fiction\"        \"genre_mystery\"               \n",
+       "[59] \"genre_music\"                  \"genre_romance\"               \n",
+       "[61] \"genre_family\"                 \"genre_war\"                   \n",
+       "[63] \"genre_foreign\"                \"depart_Art\"                  \n",
+       "[65] \"depart_Camera\"                \"depart_Crew\"                 \n",
+       "[67] \"depart_Custom_Mkup\"           \"depart_Directing\"            \n",
+       "[69] \"depart_Editing\"               \"depart_Lighting\"             \n",
+       "[71] \"depart_Production\"            \"depart_Sound\"                \n",
+       "[73] \"depart_Visual_Effects\"        \"depart_Writing\"              \n",
+       "[75] \"depart_Art_female\"            \"depart_Camera_female\"        \n",
+       "[77] \"depart_Crew_female\"           \"depart_Custom_Mkup_female\"   \n",
+       "[79] \"depart_Directing_female\"      \"depart_Editing_female\"       \n",
+       "[81] \"depart_Lighting_female\"       \"depart_Production_female\"    \n",
+       "[83] \"depart_Sound_female\"          \"depart_Visual_Effects_female\"\n",
+       "[85] \"depart_Writing_female\"       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "names(movies_ff_v)"
+   ]
   }
  ],
  "metadata": {
