--- a/stats/EDA&CleansFINAL.ipynb
+++ b/stats/EDA&CleansFINAL.ipynb
@@ -3177,7 +3177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outlierRepMatrix <- function(data,threshold=1.5) {\n",
+    "outlierRepNAMatrix <- function(data,threshold=1.5) {\n",
     "    vn <- names(data)\n",
     "    outdata <- data.frame(row1=1:nrow(data))\n",
     "    for(v in vn) {\n",
