--- a/stats/Data Cleansing with R.ipynb
+++ b/stats/Data Cleansing with R.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -17,25 +17,31 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Attaching package: ‘dplyr’\n",
+      "Attaching package: 'dplyr'\n",
       "\n",
       "\n",
-      "The following objects are masked from ‘package:stats’:\n",
+      "The following objects are masked from 'package:stats':\n",
       "\n",
       "    filter, lag\n",
       "\n",
       "\n",
-      "The following objects are masked from ‘package:base’:\n",
+      "The following objects are masked from 'package:base':\n",
       "\n",
       "    intersect, setdiff, setequal, union\n",
       "\n",
       "\n",
       "Loading required package: ggExtra\n",
       "\n",
+      "Warning message:\n",
+      "\"package 'ggExtra' was built under R version 3.6.2\"\n",
       "Loading required package: naniar\n",
       "\n",
+      "Warning message:\n",
+      "\"package 'naniar' was built under R version 3.6.2\"\n",
       "Loading required package: mvoutlier\n",
       "\n",
+      "Warning message:\n",
+      "\"package 'mvoutlier' was built under R version 3.6.2\"\n",
       "Loading required package: sgeostat\n",
       "\n",
       "Registered S3 method overwritten by 'GGally':\n",
@@ -48,6 +54,8 @@
       "\n",
       "Loading required package: mice\n",
       "\n",
+      "Warning message:\n",
+      "\"package 'mice' was built under R version 3.6.2\"\n",
       "Loading required package: lattice\n",
       "\n",
       "Registered S3 methods overwritten by 'lme4':\n",
@@ -58,16 +66,18 @@
       "  dfbetas.influence.merMod        car \n",
       "\n",
       "\n",
-      "Attaching package: ‘mice’\n",
+      "Attaching package: 'mice'\n",
       "\n",
       "\n",
-      "The following objects are masked from ‘package:base’:\n",
+      "The following objects are masked from 'package:base':\n",
       "\n",
       "    cbind, rbind\n",
       "\n",
       "\n",
       "Loading required package: MatchIt\n",
-      "\n"
+      "\n",
+      "Warning message:\n",
+      "\"package 'MatchIt' was built under R version 3.6.2\"\n"
      ]
     }
    ],
@@ -84,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,45 +178,45 @@
        "<table>\n",
        "<caption>A data.frame: 6 × 11</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>species</th><th scope=col>bw</th><th scope=col>brw</th><th scope=col>sws</th><th scope=col>ps</th><th scope=col>ts</th><th scope=col>mls</th><th scope=col>gt</th><th scope=col>pi</th><th scope=col>sei</th><th scope=col>odi</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "\t<tr><th></th><th scope=col>species</th><th scope=col>bw</th><th scope=col>brw</th><th scope=col>sws</th><th scope=col>ps</th><th scope=col>ts</th><th scope=col>mls</th><th scope=col>gt</th><th scope=col>pi</th><th scope=col>sei</th><th scope=col>odi</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>African elephant         </td><td>6654.000</td><td>5712.0</td><td> NA</td><td> NA</td><td> 3.3</td><td>38.6</td><td>645</td><td>3</td><td>5</td><td>3</td></tr>\n",
-       "\t<tr><td>African giant pouched rat</td><td>   1.000</td><td>   6.6</td><td>6.3</td><td>2.0</td><td> 8.3</td><td> 4.5</td><td> 42</td><td>3</td><td>1</td><td>3</td></tr>\n",
-       "\t<tr><td>Arctic Fox               </td><td>   3.385</td><td>  44.5</td><td> NA</td><td> NA</td><td>12.5</td><td>14.0</td><td> 60</td><td>1</td><td>1</td><td>1</td></tr>\n",
-       "\t<tr><td>Arctic ground squirrel   </td><td>   0.920</td><td>   5.7</td><td> NA</td><td> NA</td><td>16.5</td><td>  NA</td><td> 25</td><td>5</td><td>2</td><td>3</td></tr>\n",
-       "\t<tr><td>Asian elephant           </td><td>2547.000</td><td>4603.0</td><td>2.1</td><td>1.8</td><td> 3.9</td><td>69.0</td><td>624</td><td>3</td><td>5</td><td>4</td></tr>\n",
-       "\t<tr><td>Baboon                   </td><td>  10.550</td><td> 179.5</td><td>9.1</td><td>0.7</td><td> 9.8</td><td>27.0</td><td>180</td><td>4</td><td>4</td><td>4</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>African elephant         </td><td>6654.000</td><td>5712.0</td><td> NA</td><td> NA</td><td> 3.3</td><td>38.6</td><td>645</td><td>3</td><td>5</td><td>3</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>African giant pouched rat</td><td>   1.000</td><td>   6.6</td><td>6.3</td><td>2.0</td><td> 8.3</td><td> 4.5</td><td> 42</td><td>3</td><td>1</td><td>3</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>Arctic Fox               </td><td>   3.385</td><td>  44.5</td><td> NA</td><td> NA</td><td>12.5</td><td>14.0</td><td> 60</td><td>1</td><td>1</td><td>1</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>Arctic ground squirrel   </td><td>   0.920</td><td>   5.7</td><td> NA</td><td> NA</td><td>16.5</td><td>  NA</td><td> 25</td><td>5</td><td>2</td><td>3</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>Asian elephant           </td><td>2547.000</td><td>4603.0</td><td>2.1</td><td>1.8</td><td> 3.9</td><td>69.0</td><td>624</td><td>3</td><td>5</td><td>4</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>Baboon                   </td><td>  10.550</td><td> 179.5</td><td>9.1</td><td>0.7</td><td> 9.8</td><td>27.0</td><td>180</td><td>4</td><td>4</td><td>4</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "A data.frame: 6 × 11\n",
        "\\begin{tabular}{r|lllllllllll}\n",
-       " species & bw & brw & sws & ps & ts & mls & gt & pi & sei & odi\\\\\n",
-       " <fct> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <int> & <int> & <int>\\\\\n",
+       "  & species & bw & brw & sws & ps & ts & mls & gt & pi & sei & odi\\\\\n",
+       "  & <fct> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <int> & <int> & <int>\\\\\n",
        "\\hline\n",
-       "\t African elephant          & 6654.000 & 5712.0 &  NA &  NA &  3.3 & 38.6 & 645 & 3 & 5 & 3\\\\\n",
-       "\t African giant pouched rat &    1.000 &    6.6 & 6.3 & 2.0 &  8.3 &  4.5 &  42 & 3 & 1 & 3\\\\\n",
-       "\t Arctic Fox                &    3.385 &   44.5 &  NA &  NA & 12.5 & 14.0 &  60 & 1 & 1 & 1\\\\\n",
-       "\t Arctic ground squirrel    &    0.920 &    5.7 &  NA &  NA & 16.5 &   NA &  25 & 5 & 2 & 3\\\\\n",
-       "\t Asian elephant            & 2547.000 & 4603.0 & 2.1 & 1.8 &  3.9 & 69.0 & 624 & 3 & 5 & 4\\\\\n",
-       "\t Baboon                    &   10.550 &  179.5 & 9.1 & 0.7 &  9.8 & 27.0 & 180 & 4 & 4 & 4\\\\\n",
+       "\t1 & African elephant          & 6654.000 & 5712.0 &  NA &  NA &  3.3 & 38.6 & 645 & 3 & 5 & 3\\\\\n",
+       "\t2 & African giant pouched rat &    1.000 &    6.6 & 6.3 & 2.0 &  8.3 &  4.5 &  42 & 3 & 1 & 3\\\\\n",
+       "\t3 & Arctic Fox                &    3.385 &   44.5 &  NA &  NA & 12.5 & 14.0 &  60 & 1 & 1 & 1\\\\\n",
+       "\t4 & Arctic ground squirrel    &    0.920 &    5.7 &  NA &  NA & 16.5 &   NA &  25 & 5 & 2 & 3\\\\\n",
+       "\t5 & Asian elephant            & 2547.000 & 4603.0 & 2.1 & 1.8 &  3.9 & 69.0 & 624 & 3 & 5 & 4\\\\\n",
+       "\t6 & Baboon                    &   10.550 &  179.5 & 9.1 & 0.7 &  9.8 & 27.0 & 180 & 4 & 4 & 4\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
        "A data.frame: 6 × 11\n",
        "\n",
-       "| species &lt;fct&gt; | bw &lt;dbl&gt; | brw &lt;dbl&gt; | sws &lt;dbl&gt; | ps &lt;dbl&gt; | ts &lt;dbl&gt; | mls &lt;dbl&gt; | gt &lt;dbl&gt; | pi &lt;int&gt; | sei &lt;int&gt; | odi &lt;int&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| African elephant          | 6654.000 | 5712.0 |  NA |  NA |  3.3 | 38.6 | 645 | 3 | 5 | 3 |\n",
-       "| African giant pouched rat |    1.000 |    6.6 | 6.3 | 2.0 |  8.3 |  4.5 |  42 | 3 | 1 | 3 |\n",
-       "| Arctic Fox                |    3.385 |   44.5 |  NA |  NA | 12.5 | 14.0 |  60 | 1 | 1 | 1 |\n",
-       "| Arctic ground squirrel    |    0.920 |    5.7 |  NA |  NA | 16.5 |   NA |  25 | 5 | 2 | 3 |\n",
-       "| Asian elephant            | 2547.000 | 4603.0 | 2.1 | 1.8 |  3.9 | 69.0 | 624 | 3 | 5 | 4 |\n",
-       "| Baboon                    |   10.550 |  179.5 | 9.1 | 0.7 |  9.8 | 27.0 | 180 | 4 | 4 | 4 |\n",
+       "| <!--/--> | species &lt;fct&gt; | bw &lt;dbl&gt; | brw &lt;dbl&gt; | sws &lt;dbl&gt; | ps &lt;dbl&gt; | ts &lt;dbl&gt; | mls &lt;dbl&gt; | gt &lt;dbl&gt; | pi &lt;int&gt; | sei &lt;int&gt; | odi &lt;int&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | African elephant          | 6654.000 | 5712.0 |  NA |  NA |  3.3 | 38.6 | 645 | 3 | 5 | 3 |\n",
+       "| 2 | African giant pouched rat |    1.000 |    6.6 | 6.3 | 2.0 |  8.3 |  4.5 |  42 | 3 | 1 | 3 |\n",
+       "| 3 | Arctic Fox                |    3.385 |   44.5 |  NA |  NA | 12.5 | 14.0 |  60 | 1 | 1 | 1 |\n",
+       "| 4 | Arctic ground squirrel    |    0.920 |    5.7 |  NA |  NA | 16.5 |   NA |  25 | 5 | 2 | 3 |\n",
+       "| 5 | Asian elephant            | 2547.000 | 4603.0 | 2.1 | 1.8 |  3.9 | 69.0 | 624 | 3 | 5 | 4 |\n",
+       "| 6 | Baboon                    |   10.550 |  179.5 | 9.1 | 0.7 |  9.8 | 27.0 | 180 | 4 | 4 | 4 |\n",
        "\n"
       ],
       "text/plain": [
@@ -1275,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1309,7 @@
        "\n",
        "Hawkins Test:\n",
        "\n",
-       "    P-value for the Hawkins test of normality and homoscedasticity:  0.01490687 \n",
+       "    P-value for the Hawkins test of normality and homoscedasticity:  0.001545358 \n",
        "\n",
        "    Either the test of multivariate normality or homoscedasticity (or both) is rejected.\n",
        "    Provided that normality can be assumed, the hypothesis of MCAR is \n",
@@ -1307,7 +1317,7 @@
        "\n",
        "Non-Parametric Test:\n",
        "\n",
-       "    P-value for the non-parametric test of homoscedasticity:  0.7774449 \n",
+       "    P-value for the non-parametric test of homoscedasticity:  0.4279218 \n",
        "\n",
        "    Reject Normality at 0.05 significance level.\n",
        "    There is not sufficient evidence to reject MCAR at 0.05 significance level."
@@ -1319,6 +1329,7 @@
    ],
    "source": [
     "# require(MissMech)\n",
+    "library(MissMech)\n",
     "animals2 <- animals[,c(4,5,7,8)]\n",
     "miss1 <- TestMCARNormality(data=animals2)\n",
     "miss1"
