--- a/ML/Regression Models in R.ipynb
+++ b/ML/Regression Models in R.ipynb
@@ -35,7 +35,7 @@
    ],
    "source": [
     "library(readr)\n",
-    "library(mechkar)\n",
+    "#library(mechkar)\n",
     "library(dplyr)\n",
     "library(ggplot2)"
    ]
@@ -2938,7 +2938,7 @@
     }
    ],
    "source": [
-    "#X_train <- xgb.DMatrix(train1)\n",
+    "X_train <- xgb.DMatrix(train1)\n",
     "X_train <- train1\n",
     "y_train <- train$traffic_volume\n",
     "mod7 <- xgboost(data=X_train,label=y_train, nrounds=100,print_every_n = 10)"
